@@ -1,8 +1,11 @@
 #!/bin/bash
 
-set -e
+set -e -x
 
 source complete/data/env.sh
+
+push_registry="odinregbackend.molflow.com/devops"
+pull_registry="odinregistry.molflow.com/devops"
 
 if [ $# -eq 0 ]
   then
@@ -10,7 +13,7 @@ if [ $# -eq 0 ]
   else
     today=$1
     file="$PWD/complete/Dockerfile"
-    printf "FROM odinregistry.molflow.com/devops/qsmr_base:${today}\n\nCOPY data /QsmrData\n" > $file
+    printf "FROM ${pull_registry}/qsmr_base:${today}\n\nCOPY data /QsmrData\n" > $file
     cat $file
 fi
 
@@ -18,5 +21,4 @@ image_name="qsmr_${INVEMODE}_${FREQMODE}"
 
 echo $image_name
 
-docker build -t "odinregistry.molflow.com/devops/${image_name}:${today}" complete/
-#docker push "odinregistry.molflow.com/devops/${image_name}:${today}"
+docker build -t "${push_registry}/${image_name}:${today}" complete/
